* Helper to detect late reservations

Version 3.4.0 - 2014-11-03

Version 3.2.1 - 2014-10-31
* Add compatibility with Drop Shipment
* Remove reserved field of stock.move
* Some fixes

Version 3.2.0 - 2014-06-04
* Adapted to 3.2 series

Version 3.0.0 - 2014-02-06
* Initial release