@@ -1,3 +1,4 @@
+* Add searcher on destination_planned_date field
 * Helper to detect late reservations
 
 Version 3.4.0 - 2014-11-03
